--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,65 +1,64 @@
-name: Build and Test
+name: Build, Version, and Release
 
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - main  # Only trigger on main branch
 
 permissions:
   contents: write  # Required for tagging and creating releases
 
 jobs:
-  build:
+  build-and-release:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set Up Git User
-        run: |
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+    - name: Set Up Git User
+      run: |
+        git config --global user.name "${{ github.actor }}"
+        git config --global user.email "${{ github.actor }}@users.noreply.github.com"
 
-      - name: Install Arduino CLI
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
-          sudo mv bin/arduino-cli /usr/local/bin/
+    - name: Install Arduino CLI
+      run: |
+        curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
+        sudo mv bin/arduino-cli /usr/local/bin/
 
-      - name: Install Arduino AVR Core
-        run: |
-          arduino-cli core update-index
-          arduino-cli core install arduino:avr
+    - name: Install Arduino AVR Core
+      run: |
+        arduino-cli core update-index
+        arduino-cli core install arduino:avr
 
-      - name: Install dependencies
-        run: |
-          arduino-cli lib install "DisplayValueCommon"
-          arduino-cli lib install "SerialLogger"
+    - name: Run Prepare Script
+      run: |
+        bash prepare.sh
 
-      - name: Compile examples
-        run: |
-          for example in $(find ./examples -name "*.ino"); do
-            arduino-cli compile --fqbn arduino:avr:uno "$example"
-          done
+    - name: Run Build Script
+      run: |
+        bash build.sh
 
-      - name: Run lint check
-        run: |
-          echo "Running lint checks..."
-          # Add specific lint commands if required
+    - name: Run Version Increment Script (Only if Build Succeeds)
+      if: ${{ success() }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        # Increment version and tag it
+        bash version-increment.sh
 
-      - name: Increment version if changes detected
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          chmod +x version-increment.sh
-          ./version-increment.sh
-
-      - name: Push changes
-        if: success() && github.ref == 'refs/heads/main'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git push origin main --follow-tags
+    - name: Create GitHub Release
+      if: ${{ success() }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        version=$(grep -oP 'version=\K.*' library.properties)
+        release_name="Release v$version"
+        release_body="Automatic release for version v$version"
+        
+        # Create a release on GitHub
+        curl -X POST \
+          -H "Authorization: token $GITHUB_TOKEN" \
+          -H "Content-Type: application/json" \
+          -d "{\"tag_name\":\"v$version\",\"name\":\"$release_name\",\"body\":\"$release_body\",\"draft\":false,\"prerelease\":false}" \
+          https://api.github.com/repos/${{ github.repository }}/releases
