--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=UltiBlox DisplayValueNull
+name=UltiBlox-DisplayValueNull
 version=1.0.0
 author=Maker Zone Australia
 maintainer=ultiblox@makerzone.com.au
