--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -9,17 +9,71 @@ permissions:
   contents: write  # Required for tagging and creating releases
 
 jobs:
-  build:
+  test-install:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set Up Git User
+    - name: Install Arduino CLI
       run: |
-        git config --global user.name "${{ github.actor }}"
-        git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+        curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
+        sudo mv bin/arduino-cli /usr/local/bin/
+
+    - name: Install Arduino AVR Core
+      run: |
+        arduino-cli core update-index
+        arduino-cli core install arduino:avr
+
+    - name: Run Prepare Script
+      run: |
+        bash prepare.sh
+
+    - name: Run Install Script
+      run: |
+        bash install.sh
+
+    - name: Verify Build
+      run: |
+        bash build.sh
+
+  test-install-symlink:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Install Arduino CLI
+      run: |
+        curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
+        sudo mv bin/arduino-cli /usr/local/bin/
+
+    - name: Install Arduino AVR Core
+      run: |
+        arduino-cli core update-index
+        arduino-cli core install arduino:avr
+
+    - name: Run Prepare Script
+      run: |
+        bash prepare.sh
+
+    - name: Run Install Symlink Script
+      run: |
+        bash install-symlink.sh
+
+    - name: Verify Build
+      run: |
+        bash build.sh
+
+  build:
+    needs: [test-install, test-install-symlink]
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Install Arduino CLI
       run: |
